fixing scroll bounce on safari and chrome

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ body {
   height: 1400px;
   min-height: 100vh; 
   background-color: #FFB8CB;
+  overscroll-behavior: none;
 }
 
 p {
